aws-cel/require-aws-node-irsa/.chainsaw-test/ds-skip.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: other-daemonset
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: other
  template:
    metadata:
      labels:
        app: other
    spec:
      serviceAccountName: aws-node
      containers:
        - name: c
          image: registry.k8s.io/pause
