aws-cel/require-aws-node-irsa/.chainsaw-test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: require-aws-node-irsa
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
    - message: Policy is ready for reporting.
      reason: Succeeded
      status: "True"
    (conditions[?type == 'WebhookConfigured']):
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
