aws-cel/require-aws-node-irsa/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: require-aws-node-irsa
spec:
  # disable templating because it can cause issues with CEL expressions
  template: false
  steps:
  - name: step-01
    try:
    - apply:
        file: ../require-aws-node-irsa.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1alpha1
          kind: ValidatingPolicy
          metadata:
            name: require-aws-node-irsa
          spec:
            validationActions:
            - Deny
    - assert:
        file: policy-ready.yaml
    - sleep:
        duration: 10s
  - name: step-02
    try:
    - apply:
        file: ds-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ds-bad.yaml
    - apply:
        file: ds-skip.yaml
